2020-03-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/g_attrib.c: Remove "gschem" from message output.

2020-02-29 Wiley E. Hill <wileyhill@gmail.com>

    * po/bg.po: Update Bulgarian translations.
    * po/ca.po: Update Catalan translations.
    * po/da.po: Update Danish translations.
    * po/fa.po: Update Persian translations.
    * po/he.po: Update Hebrew translations.
    * po/hu.po: Update Hungarian translations.
    * po/sv.po: Update Swedish translations.
    * po/uk.po: Update Ukrainian translations.

2020-02-22 Wiley E. Hill <wileyhill@gmail.com>

    * po/bg.po: Update Bulgarian translations.
    * po/ca.po: Update Catalan translations.
    * po/da.po: Update Danish translations.
    * po/fa.po: Update Persian translations.
    * po/he.po: Update Hebrew translations.
    * po/hu.po: Update Hungarian translations.
    * po/uk.po: Update Ukrainian translations.

2020-02-15 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations
    * po/fr.po: Update French translations.
    * po/en_GB.po: Update Great Britain.
    * po/nl.po: Update Dutch translations.
    * po/ru.po: Update Russian translations.
    * po/tr.po: Update Turkish translations.

2020-02-14 Wiley E. Hill <wileyhill@gmail.com>

    * etc/system-gschemrc.scm: Add hierarchy-close-up to RC file.

    * include/gschem_idefines.h: Define flags for hierarchy-close-up.

    * include/gschem_sdefines.h: Define strings for hierarchy-close-up and
      define RC_STR_DESTINY_BOTH as RC_STR_BOTH.

    * include/gschem_toplevel.h: Add GschemToplevel int member hierarchy_up_close.

    * include/i_command.h: Declare i_cmd_hierarchy_up_close.

    * src/iface/i_vars.c: Add int default_hierarchy_up_close.

    * src/guile/g_rc.c: Add function g_rc_hierarchy_up_close to handle
      keyword hierarchy-up-close.

    * src/guile/g_register.c: Register hierarchy-up-close.
